--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
     "dropzone": "^6.0.0-beta.2",
+    "lodash": "^4.17.21",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
@@ -34,6 +35,7 @@
     "swr": "^2.2.5"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
