--- a/package.json
+++ b/package.json
@@ -19,23 +19,29 @@
     "@mui/x-date-pickers": "^7.7.1",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.11",
     "dropzone": "^6.0.0-beta.2",
+    "firebase": "^10.12.3",
     "lodash": "^4.17.21",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "nextjs-toploader": "^1.6.12",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.11",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/lodash": "^4.17.6",
     "@types/node": "^20",
     "@types/react": "^18",
