--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dayjs": "^1.11.11",
     "dropzone": "^6.0.0-beta.2",
     "firebase": "^10.12.3",
+    "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
