--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
+    "socket.io": "^4.8.0",
+    "socket.io-client": "^4.8.0",
     "styled-components": "^6.1.11",
     "swr": "^2.2.5",
     "zod": "^3.23.8"
