--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
+    "sharp": "^0.33.5",
     "socket.io": "^4.8.0",
     "socket.io-client": "^4.8.0",
     "styled-components": "^6.1.11",
