--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/x-date-pickers": "^7.7.1",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.6",
     "country-list-js": "^3.1.8",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.11",
@@ -31,6 +32,7 @@
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^1.6.12",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-firebase-hooks": "^5.1.1",
