--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "dayjs": "^1.11.11",
     "dropzone": "^6.0.0-beta.2",
     "firebase": "^10.12.3",
-    "jspdf": "^2.5.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "lodash": "^4.17.21",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
