--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Login to dockerhub
         run: echo $DOCKERHUB_TOKEN | docker login -u $DOCKERHUB_USERNAME --password-stdin
 
+      - name: Remove docker cache
+        run: docker builder prune --all
+
       - name: Build docker image
         run: docker build -t $IMAGE_NAME:latest .
 
