--- a/devops/docker/tasks/main.yml
+++ b/devops/docker/tasks/main.yml
@@ -18,7 +18,7 @@
 
 - name: Pull docker image_name
   docker_image:
-    name: "{{ IMAGE_NAME }}"
+    name: "{{ DOCKER_IMAGE_NAME }}"
     source: pull
     force_source: yes
 
@@ -30,7 +30,7 @@
 - name: Run Docker container
   docker_container:
     name: "{{ DOMAIN_NAME }}"
-    image: "{{ IMAGE_NAME }}"
+    image: "{{ DOCKER_IMAGE_NAME }}"
     image_name_mismatch: recreate
     state: started
     restart_policy: always
