--- a/devops/docker/tasks/main.yml
+++ b/devops/docker/tasks/main.yml
@@ -27,6 +27,13 @@
     name: "{{ DOMAIN_NAME }}"
     state: absent
 
+- name: Log a message with a variable
+  debug:
+    msg: "The value of {{ item }} is: {{ lookup('vars', item) }}"
+  loop:
+    - NEXT_PUBLIC_API_BASE_URL
+    - NEXT_PUBLIC_URL
+
 - name: Run Docker container
   docker_container:
     name: "{{ DOMAIN_NAME }}"
